test/demoply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    HELP
    ALTER
    LOAD
    VIEW
    NOT
    DESC
    ASC
    IS

Grammar

Rule 0     S' -> start
Rule 1     start -> command ;
Rule 2     command -> ddl
Rule 3     command -> dml
Rule 4     command -> utility
Rule 5     command -> nothing
Rule 6     ddl -> createtable
Rule 7     ddl -> createindex
Rule 8     ddl -> droptable
Rule 9     ddl -> dropindex
Rule 10    ddl -> showtables
Rule 11    ddl -> alerttable
Rule 12    ddl -> createuser
Rule 13    ddl -> grantuser
Rule 14    ddl -> revokeuser
Rule 15    dml -> query
Rule 16    dml -> insert
Rule 17    dml -> delete
Rule 18    dml -> update
Rule 19    utility -> exit
Rule 20    utility -> print
Rule 21    showtables -> SHOW TABLES
Rule 22    createuser -> CREATE USER ID PASSWORD STRING
Rule 23    grantuser -> GRANT power_list ON non_mrelation_list TO non_mrelation_list
Rule 24    revokeuser -> REVOKE power_list ON non_mrelation_list FROM non_mrelation_list
Rule 25    power_list -> power_list , power_type
Rule 26    power_list -> power_type
Rule 27    power_type -> SELECT
Rule 28    power_type -> UPDATE
Rule 29    power_type -> INSERT
Rule 30    power_type -> DELETE
Rule 31    power_type -> PRINT
Rule 32    power_type -> ALL
Rule 33    alerttable -> ALERT TABLE ID ADD attrtype
Rule 34    alerttable -> ALERT TABLE ID DROP non_mrelation_list
Rule 35    createtable -> CREATE TABLE ID ( non_mattrtype_list )
Rule 36    createindex -> CREATE INDEX ID ( ID )
Rule 37    droptable -> DROP TABLE ID
Rule 38    dropindex -> DROP INDEX ID ( ID )
Rule 39    print -> PRINT ID
Rule 40    exit -> EXIT
Rule 41    query -> SELECT non_mselect_clause FROM non_mrelation_list opwhere_clause
Rule 42    insert -> INSERT INTO ID VALUES inservalue_list
Rule 43    inservalue_list -> ( non_mvalue_list ) , inservalue_list
Rule 44    inservalue_list -> ( non_mvalue_list )
Rule 45    delete -> DELETE FROM ID opwhere_clause
Rule 46    update -> UPDATE ID SET relattr EQ relattr_or_value opwhere_clause
Rule 47    non_mattrtype_list -> attrtype , non_mattrtype_list
Rule 48    non_mattrtype_list -> attrtype
Rule 49    attrtype -> ID type
Rule 50    attrtype -> ID type ( NUMBER )
Rule 51    attrtype -> PRIMARY KEY ( ID )
Rule 52    type -> INT
Rule 53    type -> CHAR
Rule 54    non_mselect_clause -> non_mrelattr_list
Rule 55    non_mselect_clause -> *
Rule 56    non_mrelattr_list -> relattr , non_mrelattr_list
Rule 57    non_mrelattr_list -> relattr
Rule 58    relattr -> ID . ID
Rule 59    relattr -> ID
Rule 60    non_mrelation_list -> relation , non_mrelation_list
Rule 61    non_mrelation_list -> relation
Rule 62    relation -> ID
Rule 63    opwhere_clause -> WHERE non_mcond_list
Rule 64    opwhere_clause -> nothing
Rule 65    non_mcond_list -> non_mcond_list AND non_mcond_list
Rule 66    non_mcond_list -> non_mcond_list OR non_mcond_list
Rule 67    non_mcond_list -> ( non_mcond_list )
Rule 68    non_mcond_list -> condition
Rule 69    condition -> relattr op relattr_or_value
Rule 70    condition -> relattr EQ null_value
Rule 71    condition -> relattr NE null_value
Rule 72    relattr_or_value -> relattr
Rule 73    relattr_or_value -> value
Rule 74    non_mvalue_list -> value , non_mvalue_list
Rule 75    non_mvalue_list -> value
Rule 76    non_mvalue_list -> null_value , non_mvalue_list
Rule 77    non_mvalue_list -> null_value
Rule 78    value -> STRING
Rule 79    value -> NUMBER
Rule 80    null_value -> NULL
Rule 81    op -> LT
Rule 82    op -> LE
Rule 83    op -> GT
Rule 84    op -> GE
Rule 85    op -> EQ
Rule 86    op -> NE
Rule 87    nothing -> <empty>

Terminals, with rules where they appear

(                    : 35 36 38 43 44 50 51 67
)                    : 35 36 38 43 44 50 51 67
*                    : 55
,                    : 25 43 47 56 60 74 76
.                    : 58
;                    : 1
ADD                  : 33
ALERT                : 33 34
ALL                  : 32
ALTER                : 
AND                  : 65
ASC                  : 
CHAR                 : 53
CREATE               : 22 35 36
DELETE               : 30 45
DESC                 : 
DROP                 : 34 37 38
EQ                   : 46 70 85
EXIT                 : 40
FROM                 : 24 41 45
GE                   : 84
GRANT                : 23
GT                   : 83
HELP                 : 
ID                   : 22 33 34 35 36 36 37 38 38 39 42 45 46 49 50 51 58 58 59 62
INDEX                : 36 38
INSERT               : 29 42
INT                  : 52
INTO                 : 42
IS                   : 
KEY                  : 51
LE                   : 82
LOAD                 : 
LT                   : 81
NE                   : 71 86
NOT                  : 
NULL                 : 80
NUMBER               : 50 79
ON                   : 23 24
OR                   : 66
PASSWORD             : 22
PRIMARY              : 51
PRINT                : 31 39
REVOKE               : 24
SELECT               : 27 41
SET                  : 46
SHOW                 : 21
STRING               : 22 78
TABLE                : 33 34 35 37
TABLES               : 21
TO                   : 23
UPDATE               : 28 46
USER                 : 22
VALUES               : 42
VIEW                 : 
WHERE                : 63
error                : 

Nonterminals, with rules where they appear

alerttable           : 11
attrtype             : 33 47 48
command              : 1
condition            : 68
createindex          : 7
createtable          : 6
createuser           : 12
ddl                  : 2
delete               : 17
dml                  : 3
dropindex            : 9
droptable            : 8
exit                 : 19
grantuser            : 13
insert               : 16
inservalue_list      : 42 43
non_mattrtype_list   : 35 47
non_mcond_list       : 63 65 65 66 66 67
non_mrelation_list   : 23 23 24 24 34 41 60
non_mrelattr_list    : 54 56
non_mselect_clause   : 41
non_mvalue_list      : 43 44 74 76
nothing              : 5 64
null_value           : 70 71 76 77
op                   : 69
opwhere_clause       : 41 45 46
power_list           : 23 24 25
power_type           : 25 26
print                : 20
query                : 15
relation             : 60 61
relattr              : 46 56 57 69 70 71 72
relattr_or_value     : 46 69
revokeuser           : 14
showtables           : 10
start                : 0
type                 : 49 50
update               : 18
utility              : 4
value                : 73 74 75

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . command ;
    (2) command -> . ddl
    (3) command -> . dml
    (4) command -> . utility
    (5) command -> . nothing
    (6) ddl -> . createtable
    (7) ddl -> . createindex
    (8) ddl -> . droptable
    (9) ddl -> . dropindex
    (10) ddl -> . showtables
    (11) ddl -> . alerttable
    (12) ddl -> . createuser
    (13) ddl -> . grantuser
    (14) ddl -> . revokeuser
    (15) dml -> . query
    (16) dml -> . insert
    (17) dml -> . delete
    (18) dml -> . update
    (19) utility -> . exit
    (20) utility -> . print
    (87) nothing -> .
    (35) createtable -> . CREATE TABLE ID ( non_mattrtype_list )
    (36) createindex -> . CREATE INDEX ID ( ID )
    (37) droptable -> . DROP TABLE ID
    (38) dropindex -> . DROP INDEX ID ( ID )
    (21) showtables -> . SHOW TABLES
    (33) alerttable -> . ALERT TABLE ID ADD attrtype
    (34) alerttable -> . ALERT TABLE ID DROP non_mrelation_list
    (22) createuser -> . CREATE USER ID PASSWORD STRING
    (23) grantuser -> . GRANT power_list ON non_mrelation_list TO non_mrelation_list
    (24) revokeuser -> . REVOKE power_list ON non_mrelation_list FROM non_mrelation_list
    (41) query -> . SELECT non_mselect_clause FROM non_mrelation_list opwhere_clause
    (42) insert -> . INSERT INTO ID VALUES inservalue_list
    (45) delete -> . DELETE FROM ID opwhere_clause
    (46) update -> . UPDATE ID SET relattr EQ relattr_or_value opwhere_clause
    (40) exit -> . EXIT
    (39) print -> . PRINT ID

    ;               reduce using rule 87 (nothing -> .)
    CREATE          shift and go to state 30
    DROP            shift and go to state 21
    SHOW            shift and go to state 28
    ALERT           shift and go to state 12
    GRANT           shift and go to state 10
    REVOKE          shift and go to state 29
    SELECT          shift and go to state 27
    INSERT          shift and go to state 5
    DELETE          shift and go to state 7
    UPDATE          shift and go to state 9
    EXIT            shift and go to state 26
    PRINT           shift and go to state 32

    utility                        shift and go to state 15
    ddl                            shift and go to state 16
    showtables                     shift and go to state 17
    createuser                     shift and go to state 18
    exit                           shift and go to state 19
    command                        shift and go to state 20
    createindex                    shift and go to state 4
    grantuser                      shift and go to state 22
    dml                            shift and go to state 6
    start                          shift and go to state 33
    update                         shift and go to state 8
    createtable                    shift and go to state 25
    delete                         shift and go to state 24
    nothing                        shift and go to state 1
    query                          shift and go to state 11
    revokeuser                     shift and go to state 3
    insert                         shift and go to state 13
    print                          shift and go to state 2
    droptable                      shift and go to state 31
    dropindex                      shift and go to state 14
    alerttable                     shift and go to state 23

state 1

    (5) command -> nothing .

    ;               reduce using rule 5 (command -> nothing .)


state 2

    (20) utility -> print .

    ;               reduce using rule 20 (utility -> print .)


state 3

    (14) ddl -> revokeuser .

    ;               reduce using rule 14 (ddl -> revokeuser .)


state 4

    (7) ddl -> createindex .

    ;               reduce using rule 7 (ddl -> createindex .)


state 5

    (42) insert -> INSERT . INTO ID VALUES inservalue_list

    INTO            shift and go to state 34


state 6

    (3) command -> dml .

    ;               reduce using rule 3 (command -> dml .)


state 7

    (45) delete -> DELETE . FROM ID opwhere_clause

    FROM            shift and go to state 35


state 8

    (18) dml -> update .

    ;               reduce using rule 18 (dml -> update .)


state 9

    (46) update -> UPDATE . ID SET relattr EQ relattr_or_value opwhere_clause

    ID              shift and go to state 36


state 10

    (23) grantuser -> GRANT . power_list ON non_mrelation_list TO non_mrelation_list
    (25) power_list -> . power_list , power_type
    (26) power_list -> . power_type
    (27) power_type -> . SELECT
    (28) power_type -> . UPDATE
    (29) power_type -> . INSERT
    (30) power_type -> . DELETE
    (31) power_type -> . PRINT
    (32) power_type -> . ALL

    SELECT          shift and go to state 37
    UPDATE          shift and go to state 44
    INSERT          shift and go to state 39
    DELETE          shift and go to state 42
    PRINT           shift and go to state 41
    ALL             shift and go to state 38

    power_list                     shift and go to state 40
    power_type                     shift and go to state 43

state 11

    (15) dml -> query .

    ;               reduce using rule 15 (dml -> query .)


state 12

    (33) alerttable -> ALERT . TABLE ID ADD attrtype
    (34) alerttable -> ALERT . TABLE ID DROP non_mrelation_list

    TABLE           shift and go to state 45


state 13

    (16) dml -> insert .

    ;               reduce using rule 16 (dml -> insert .)


state 14

    (9) ddl -> dropindex .

    ;               reduce using rule 9 (ddl -> dropindex .)


state 15

    (4) command -> utility .

    ;               reduce using rule 4 (command -> utility .)


state 16

    (2) command -> ddl .

    ;               reduce using rule 2 (command -> ddl .)


state 17

    (10) ddl -> showtables .

    ;               reduce using rule 10 (ddl -> showtables .)


state 18

    (12) ddl -> createuser .

    ;               reduce using rule 12 (ddl -> createuser .)


state 19

    (19) utility -> exit .

    ;               reduce using rule 19 (utility -> exit .)


state 20

    (1) start -> command . ;

    ;               shift and go to state 46


state 21

    (37) droptable -> DROP . TABLE ID
    (38) dropindex -> DROP . INDEX ID ( ID )

    TABLE           shift and go to state 48
    INDEX           shift and go to state 47


state 22

    (13) ddl -> grantuser .

    ;               reduce using rule 13 (ddl -> grantuser .)


state 23

    (11) ddl -> alerttable .

    ;               reduce using rule 11 (ddl -> alerttable .)


state 24

    (17) dml -> delete .

    ;               reduce using rule 17 (dml -> delete .)


state 25

    (6) ddl -> createtable .

    ;               reduce using rule 6 (ddl -> createtable .)


state 26

    (40) exit -> EXIT .

    ;               reduce using rule 40 (exit -> EXIT .)


state 27

    (41) query -> SELECT . non_mselect_clause FROM non_mrelation_list opwhere_clause
    (54) non_mselect_clause -> . non_mrelattr_list
    (55) non_mselect_clause -> . *
    (56) non_mrelattr_list -> . relattr , non_mrelattr_list
    (57) non_mrelattr_list -> . relattr
    (58) relattr -> . ID . ID
    (59) relattr -> . ID

    *               shift and go to state 53
    ID              shift and go to state 49

    non_mrelattr_list              shift and go to state 52
    relattr                        shift and go to state 50
    non_mselect_clause             shift and go to state 51

state 28

    (21) showtables -> SHOW . TABLES

    TABLES          shift and go to state 54


state 29

    (24) revokeuser -> REVOKE . power_list ON non_mrelation_list FROM non_mrelation_list
    (25) power_list -> . power_list , power_type
    (26) power_list -> . power_type
    (27) power_type -> . SELECT
    (28) power_type -> . UPDATE
    (29) power_type -> . INSERT
    (30) power_type -> . DELETE
    (31) power_type -> . PRINT
    (32) power_type -> . ALL

    SELECT          shift and go to state 37
    UPDATE          shift and go to state 44
    INSERT          shift and go to state 39
    DELETE          shift and go to state 42
    PRINT           shift and go to state 41
    ALL             shift and go to state 38

    power_list                     shift and go to state 55
    power_type                     shift and go to state 43

state 30

    (35) createtable -> CREATE . TABLE ID ( non_mattrtype_list )
    (36) createindex -> CREATE . INDEX ID ( ID )
    (22) createuser -> CREATE . USER ID PASSWORD STRING

    TABLE           shift and go to state 56
    INDEX           shift and go to state 57
    USER            shift and go to state 58


state 31

    (8) ddl -> droptable .

    ;               reduce using rule 8 (ddl -> droptable .)


state 32

    (39) print -> PRINT . ID

    ID              shift and go to state 59


state 33

    (0) S' -> start .



state 34

    (42) insert -> INSERT INTO . ID VALUES inservalue_list

    ID              shift and go to state 60


state 35

    (45) delete -> DELETE FROM . ID opwhere_clause

    ID              shift and go to state 61


state 36

    (46) update -> UPDATE ID . SET relattr EQ relattr_or_value opwhere_clause

    SET             shift and go to state 62


state 37

    (27) power_type -> SELECT .

    ON              reduce using rule 27 (power_type -> SELECT .)
    ,               reduce using rule 27 (power_type -> SELECT .)


state 38

    (32) power_type -> ALL .

    ON              reduce using rule 32 (power_type -> ALL .)
    ,               reduce using rule 32 (power_type -> ALL .)


state 39

    (29) power_type -> INSERT .

    ON              reduce using rule 29 (power_type -> INSERT .)
    ,               reduce using rule 29 (power_type -> INSERT .)


state 40

    (23) grantuser -> GRANT power_list . ON non_mrelation_list TO non_mrelation_list
    (25) power_list -> power_list . , power_type

    ON              shift and go to state 64
    ,               shift and go to state 63


state 41

    (31) power_type -> PRINT .

    ON              reduce using rule 31 (power_type -> PRINT .)
    ,               reduce using rule 31 (power_type -> PRINT .)


state 42

    (30) power_type -> DELETE .

    ON              reduce using rule 30 (power_type -> DELETE .)
    ,               reduce using rule 30 (power_type -> DELETE .)


state 43

    (26) power_list -> power_type .

    ON              reduce using rule 26 (power_list -> power_type .)
    ,               reduce using rule 26 (power_list -> power_type .)


state 44

    (28) power_type -> UPDATE .

    ON              reduce using rule 28 (power_type -> UPDATE .)
    ,               reduce using rule 28 (power_type -> UPDATE .)


state 45

    (33) alerttable -> ALERT TABLE . ID ADD attrtype
    (34) alerttable -> ALERT TABLE . ID DROP non_mrelation_list

    ID              shift and go to state 65


state 46

    (1) start -> command ; .

    $end            reduce using rule 1 (start -> command ; .)


state 47

    (38) dropindex -> DROP INDEX . ID ( ID )

    ID              shift and go to state 66


state 48

    (37) droptable -> DROP TABLE . ID

    ID              shift and go to state 67


state 49

    (58) relattr -> ID . . ID
    (59) relattr -> ID .

    .               shift and go to state 68
    EQ              reduce using rule 59 (relattr -> ID .)
    NE              reduce using rule 59 (relattr -> ID .)
    LT              reduce using rule 59 (relattr -> ID .)
    LE              reduce using rule 59 (relattr -> ID .)
    GT              reduce using rule 59 (relattr -> ID .)
    GE              reduce using rule 59 (relattr -> ID .)
    WHERE           reduce using rule 59 (relattr -> ID .)
    ;               reduce using rule 59 (relattr -> ID .)
    ,               reduce using rule 59 (relattr -> ID .)
    FROM            reduce using rule 59 (relattr -> ID .)
    AND             reduce using rule 59 (relattr -> ID .)
    OR              reduce using rule 59 (relattr -> ID .)
    )               reduce using rule 59 (relattr -> ID .)


state 50

    (56) non_mrelattr_list -> relattr . , non_mrelattr_list
    (57) non_mrelattr_list -> relattr .

    ,               shift and go to state 69
    FROM            reduce using rule 57 (non_mrelattr_list -> relattr .)


state 51

    (41) query -> SELECT non_mselect_clause . FROM non_mrelation_list opwhere_clause

    FROM            shift and go to state 70


state 52

    (54) non_mselect_clause -> non_mrelattr_list .

    FROM            reduce using rule 54 (non_mselect_clause -> non_mrelattr_list .)


state 53

    (55) non_mselect_clause -> * .

    FROM            reduce using rule 55 (non_mselect_clause -> * .)


state 54

    (21) showtables -> SHOW TABLES .

    ;               reduce using rule 21 (showtables -> SHOW TABLES .)


state 55

    (24) revokeuser -> REVOKE power_list . ON non_mrelation_list FROM non_mrelation_list
    (25) power_list -> power_list . , power_type

    ON              shift and go to state 71
    ,               shift and go to state 63


state 56

    (35) createtable -> CREATE TABLE . ID ( non_mattrtype_list )

    ID              shift and go to state 72


state 57

    (36) createindex -> CREATE INDEX . ID ( ID )

    ID              shift and go to state 73


state 58

    (22) createuser -> CREATE USER . ID PASSWORD STRING

    ID              shift and go to state 74


state 59

    (39) print -> PRINT ID .

    ;               reduce using rule 39 (print -> PRINT ID .)


state 60

    (42) insert -> INSERT INTO ID . VALUES inservalue_list

    VALUES          shift and go to state 75


state 61

    (45) delete -> DELETE FROM ID . opwhere_clause
    (63) opwhere_clause -> . WHERE non_mcond_list
    (64) opwhere_clause -> . nothing
    (87) nothing -> .

    WHERE           shift and go to state 78
    ;               reduce using rule 87 (nothing -> .)

    opwhere_clause                 shift and go to state 76
    nothing                        shift and go to state 77

state 62

    (46) update -> UPDATE ID SET . relattr EQ relattr_or_value opwhere_clause
    (58) relattr -> . ID . ID
    (59) relattr -> . ID

    ID              shift and go to state 49

    relattr                        shift and go to state 79

state 63

    (25) power_list -> power_list , . power_type
    (27) power_type -> . SELECT
    (28) power_type -> . UPDATE
    (29) power_type -> . INSERT
    (30) power_type -> . DELETE
    (31) power_type -> . PRINT
    (32) power_type -> . ALL

    SELECT          shift and go to state 37
    UPDATE          shift and go to state 44
    INSERT          shift and go to state 39
    DELETE          shift and go to state 42
    PRINT           shift and go to state 41
    ALL             shift and go to state 38

    power_type                     shift and go to state 80

state 64

    (23) grantuser -> GRANT power_list ON . non_mrelation_list TO non_mrelation_list
    (60) non_mrelation_list -> . relation , non_mrelation_list
    (61) non_mrelation_list -> . relation
    (62) relation -> . ID

    ID              shift and go to state 83

    relation                       shift and go to state 82
    non_mrelation_list             shift and go to state 81

state 65

    (33) alerttable -> ALERT TABLE ID . ADD attrtype
    (34) alerttable -> ALERT TABLE ID . DROP non_mrelation_list

    ADD             shift and go to state 84
    DROP            shift and go to state 85


state 66

    (38) dropindex -> DROP INDEX ID . ( ID )

    (               shift and go to state 86


state 67

    (37) droptable -> DROP TABLE ID .

    ;               reduce using rule 37 (droptable -> DROP TABLE ID .)


state 68

    (58) relattr -> ID . . ID

    ID              shift and go to state 87


state 69

    (56) non_mrelattr_list -> relattr , . non_mrelattr_list
    (56) non_mrelattr_list -> . relattr , non_mrelattr_list
    (57) non_mrelattr_list -> . relattr
    (58) relattr -> . ID . ID
    (59) relattr -> . ID

    ID              shift and go to state 49

    non_mrelattr_list              shift and go to state 88
    relattr                        shift and go to state 50

state 70

    (41) query -> SELECT non_mselect_clause FROM . non_mrelation_list opwhere_clause
    (60) non_mrelation_list -> . relation , non_mrelation_list
    (61) non_mrelation_list -> . relation
    (62) relation -> . ID

    ID              shift and go to state 83

    relation                       shift and go to state 82
    non_mrelation_list             shift and go to state 89

state 71

    (24) revokeuser -> REVOKE power_list ON . non_mrelation_list FROM non_mrelation_list
    (60) non_mrelation_list -> . relation , non_mrelation_list
    (61) non_mrelation_list -> . relation
    (62) relation -> . ID

    ID              shift and go to state 83

    relation                       shift and go to state 82
    non_mrelation_list             shift and go to state 90

state 72

    (35) createtable -> CREATE TABLE ID . ( non_mattrtype_list )

    (               shift and go to state 91


state 73

    (36) createindex -> CREATE INDEX ID . ( ID )

    (               shift and go to state 92


state 74

    (22) createuser -> CREATE USER ID . PASSWORD STRING

    PASSWORD        shift and go to state 93


state 75

    (42) insert -> INSERT INTO ID VALUES . inservalue_list
    (43) inservalue_list -> . ( non_mvalue_list ) , inservalue_list
    (44) inservalue_list -> . ( non_mvalue_list )

    (               shift and go to state 94

    inservalue_list                shift and go to state 95

state 76

    (45) delete -> DELETE FROM ID opwhere_clause .

    ;               reduce using rule 45 (delete -> DELETE FROM ID opwhere_clause .)


state 77

    (64) opwhere_clause -> nothing .

    ;               reduce using rule 64 (opwhere_clause -> nothing .)


state 78

    (63) opwhere_clause -> WHERE . non_mcond_list
    (65) non_mcond_list -> . non_mcond_list AND non_mcond_list
    (66) non_mcond_list -> . non_mcond_list OR non_mcond_list
    (67) non_mcond_list -> . ( non_mcond_list )
    (68) non_mcond_list -> . condition
    (69) condition -> . relattr op relattr_or_value
    (70) condition -> . relattr EQ null_value
    (71) condition -> . relattr NE null_value
    (58) relattr -> . ID . ID
    (59) relattr -> . ID

    (               shift and go to state 96
    ID              shift and go to state 49

    condition                      shift and go to state 97
    relattr                        shift and go to state 98
    non_mcond_list                 shift and go to state 99

state 79

    (46) update -> UPDATE ID SET relattr . EQ relattr_or_value opwhere_clause

    EQ              shift and go to state 100


state 80

    (25) power_list -> power_list , power_type .

    ON              reduce using rule 25 (power_list -> power_list , power_type .)
    ,               reduce using rule 25 (power_list -> power_list , power_type .)


state 81

    (23) grantuser -> GRANT power_list ON non_mrelation_list . TO non_mrelation_list

    TO              shift and go to state 101


state 82

    (60) non_mrelation_list -> relation . , non_mrelation_list
    (61) non_mrelation_list -> relation .

    ,               shift and go to state 102
    TO              reduce using rule 61 (non_mrelation_list -> relation .)
    WHERE           reduce using rule 61 (non_mrelation_list -> relation .)
    ;               reduce using rule 61 (non_mrelation_list -> relation .)
    FROM            reduce using rule 61 (non_mrelation_list -> relation .)


state 83

    (62) relation -> ID .

    ,               reduce using rule 62 (relation -> ID .)
    ;               reduce using rule 62 (relation -> ID .)
    WHERE           reduce using rule 62 (relation -> ID .)
    TO              reduce using rule 62 (relation -> ID .)
    FROM            reduce using rule 62 (relation -> ID .)


state 84

    (33) alerttable -> ALERT TABLE ID ADD . attrtype
    (49) attrtype -> . ID type
    (50) attrtype -> . ID type ( NUMBER )
    (51) attrtype -> . PRIMARY KEY ( ID )

    ID              shift and go to state 104
    PRIMARY         shift and go to state 103

    attrtype                       shift and go to state 105

state 85

    (34) alerttable -> ALERT TABLE ID DROP . non_mrelation_list
    (60) non_mrelation_list -> . relation , non_mrelation_list
    (61) non_mrelation_list -> . relation
    (62) relation -> . ID

    ID              shift and go to state 83

    relation                       shift and go to state 82
    non_mrelation_list             shift and go to state 106

state 86

    (38) dropindex -> DROP INDEX ID ( . ID )

    ID              shift and go to state 107


state 87

    (58) relattr -> ID . ID .

    EQ              reduce using rule 58 (relattr -> ID . ID .)
    NE              reduce using rule 58 (relattr -> ID . ID .)
    LT              reduce using rule 58 (relattr -> ID . ID .)
    LE              reduce using rule 58 (relattr -> ID . ID .)
    GT              reduce using rule 58 (relattr -> ID . ID .)
    GE              reduce using rule 58 (relattr -> ID . ID .)
    WHERE           reduce using rule 58 (relattr -> ID . ID .)
    ;               reduce using rule 58 (relattr -> ID . ID .)
    ,               reduce using rule 58 (relattr -> ID . ID .)
    FROM            reduce using rule 58 (relattr -> ID . ID .)
    AND             reduce using rule 58 (relattr -> ID . ID .)
    OR              reduce using rule 58 (relattr -> ID . ID .)
    )               reduce using rule 58 (relattr -> ID . ID .)


state 88

    (56) non_mrelattr_list -> relattr , non_mrelattr_list .

    FROM            reduce using rule 56 (non_mrelattr_list -> relattr , non_mrelattr_list .)


state 89

    (41) query -> SELECT non_mselect_clause FROM non_mrelation_list . opwhere_clause
    (63) opwhere_clause -> . WHERE non_mcond_list
    (64) opwhere_clause -> . nothing
    (87) nothing -> .
